--- a/src/SidebarOption.css
+++ b/src/SidebarOption.css
@@ -1,4 +1,6 @@
 .sidebarOption{
+    display: flex;
+    align-items: center;
     color: gray;
     cursor: pointer;
     height: 40px;
@@ -7,4 +9,15 @@
 
 .sidebarOption:hover{
     color: white;
+}
+
+.sidebarOption__icon{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sidebarOption > p{
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 15px;
 }
